# Genai-projects

./: README.md
GEMINI-Style_LLM_POC_with_Open-Source_Model/: README.md  final_rag.ipynb
OpenAI-Agent-SDK/: README.md  streamlit_agent.py
T2SQL/: Dockerfile  README.md  config.json  lookup_mapping.json  nginx.conf  predictor.py  preprocess.py  prompt_generation.py  rag.py  replacements.json  requirements.txt  secret_manager.py  snowflake_connector.py  sql_generator.py  sql_processor.py  text_replacer.py
Text_Generation_Model_from_Scratch/: README.md  Text Generation Model from Scratch.ipynb
crewai-flows-feedback-loop/: .gitignore  README.md  crewai_flow.html  pyproject.toml
groq-chatbot/: .gitignore  README.md  app.py  requirements.txt
pdf-parser-comparision/: .gitignore  README.md  (+2 more)
synthetic-data-geneation/: .env.example  .gitignore  README.md  main.py  notebook.ipynb  pyproject.toml
synthetic-data-geneation/config/: email_template.yaml  product_template.yaml  system_config.yaml
synthetic-data-geneation/data/input/: emails.json
synthetic-data-geneation/data/output/emails/: emails.json
synthetic-data-geneation/data/output/products/: products.json
synthetic-data-geneation/src/: __init__.py  assistant.py  generator.py  main.py
synthetic-data-geneation/src/templates/: __init__.py  email_template.py  product_template.py
synthetic-data-geneation/src/utils/: __init__.py  config_loader.py  logger.py  output_formatter.py  pydantic_generator.py
synthetic-data-geneation/tests/: __init__.py  test.py  test_email_template.py  test_output_formatter.py
(+47 files in other folders)
